fix form tag wrap issue

--- a/source/static/Form.css
+++ b/source/static/Form.css
@@ -90,7 +90,7 @@ input[type="text"]:focus {
 
 .tag-container {
 	display: flex;
-	flex-flow: nowrap row-reverse;
+	flex-flow: wrap row;
 }
 
 .tag {
